--- a/src/app/modules/admin/modeles/modeles-list/modeles-list.component.html
+++ b/src/app/modules/admin/modeles/modeles-list/modeles-list.component.html
@@ -23,7 +23,7 @@
                         <mat-icon
                             class="icon-size-5"
                             svgIcon="add"></mat-icon>
-                        <span class="ml-2">Add Category</span></a>
+                        <span class="ml-2">Add Model</span></a>
                 </div>
             </div>
 
