--- a/src/app/modules/admin/product/product-form/product-form.component.html
+++ b/src/app/modules/admin/product/product-form/product-form.component.html
@@ -51,7 +51,7 @@
                         >
 
                     </mat-form-field>
-                    <mat-form-field formGroupName="category" class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
+                    <mat-form-field formGroupName="category" class="fuse-mat-no-subscript w-full "
                                     appearance="fill">
                         <mat-label>Categorie</mat-label>
                         <mat-select formControlName="id">
@@ -61,9 +61,9 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                    <mat-form-field  formGroupName="marque" class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
-                                    appearance="fill">
-                        <mat-label>Categorie</mat-label>
+                    <mat-form-field  formGroupName="marque" class="fuse-mat-no-subscript w-full "
+                                     appearance="fill">
+                        <mat-label>Marques</mat-label>
                         <mat-select formControlName="id">
                             <mat-option [value]="null">-</mat-option>
                             <mat-option *ngFor="let marques of marquesDataSource" [value]="marques.id">
@@ -71,9 +71,9 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                    <mat-form-field  formGroupName="model" class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
-                                    appearance="fill">
-                        <mat-label>Categorie</mat-label>
+                    <mat-form-field  formGroupName="model" class="fuse-mat-no-subscript w-full "
+                                     appearance="fill">
+                        <mat-label>Models</mat-label>
                         <mat-select formControlName="id">
                             <mat-option [value]="null">-</mat-option>
                             <mat-option *ngFor="let models of modelsDataSource" [value]="models.id">
@@ -178,6 +178,10 @@
                             <td>
                                 <div [formGroupName]="i"
                                      class="flex flex-col sm:flex-row items-center justify-between w-full max-w-xs sm:max-w-none mb-8">
+                                    <input
+                                        type="file"
+                                        (input)="uploadImg($event,i)"
+                                    >
                                     <mat-form-field
                                         class="fuse-mat-no-subscript flex-auto w-full sm:ml-4">
                                         <mat-label>img Link</mat-label>
@@ -185,7 +189,6 @@
                                             matInput
                                             formControlName="path"
                                         >
-
                                     </mat-form-field>
                                     <div
                                         class=" items-center pl-4 pt-4"
